# llm-agents

./: .gitignore  AUTOGEN.md  FoundryLocal.md  LangGraph.md  PROMPTFLOW.md  README.md  SETUP.md  SETUP_WIN.md  local_agent.ipynb  local_llm.ipynb  local_retrieval_agent.ipynb  requirements.txt  requirements_backup_1.txt  requirements_backup_2.txt  requirements_win.txt
autogen/: .gitignore  SETUP.md  autogen_ollama_gorilla_v2.ipynb  requirements.txt
azagents/: README.md  SETUP.md  requirements.txt
azureagents/: README.md  requirements.txt
deployment/: Modelfile  Modelfile_2_backup
example-gcp/: gemini_intro.ipynb  gemini_retrieval_agent.ipynb  local_retrieval_agent.ipynb
example-mac/: local_function_call_example.ipynb  local_img_gen.ipynb  local_llm.ipynb  local_llmstudio_gorilla_v1.ipynb  local_ollama_function_calling_openai_compatible.ipynb  local_ollama_gorilla_v2.ipynb  local_ollama_gorilla_v2_openai.ipynb  local_ollama_langchain_fc.ipynb  local_react_agent.ipynb  local_retrieval_agent.ipynb
example-win/: test.ipynb
langgraph/: chatgraph.ipynb  chatgraph_simple.ipynb
maf/: .env.example  .gitignore  01basic_llm_chatcompletions_client.py  01basic_llm_client_ignore_tools.py  02basic_llm_client_as_agent_example.py  02basic_single_agent_client.py  02basic_single_agent_with_mcp.py  03basic_workflow.py  README.md  main.py  pyproject.toml  quickstart.md  reinstall.sh  requirements.txt  todo_basic_llm_response_client.py
maf/data/03workflow/: highquality_text_input_sample.txt  lowquality_text_input_sample.txt
maf/utils/: fdyauth.py  model_client.py
(+38 files in other folders)
